# toolkit_netcom

./: .gitignore  README.md  complete_list.txt  full_managment_ip.txt  full_routes_ocnus.txt  ips.txt  managment_ip.txt  report_template.txt  routes.txt
api/: Cargo.toml  build.rs  gateway.txt  resource.rc
api/src/: .env  Database Scheme.sql  auxiliar.rs  db.rs  main copy.rs  main.rs  other.rs  ping_test_mode.rs  report_mode.rs  ssh.rs  trace_upload_to_db.rs  upload_to_db.rs
toolkit/: CEC  Cargo.toml  MS  PLI  Reporte15-02-2024_04-13-am.txt  TE  available_IP.txt  available_segments.txt  build.rs  credentials.txt  dynamic_ips.txt  in_use_ip.txt  in_use_segments.txt  ip_ffth_nodes.json  list_ip.txt
toolkit/cache/: IP_Dinamicas_01-03-2024_12-57-pm.txt  IP_Dinamicas_06-03-2024_12-21-pm.txt  IP_Dinamicas_06-03-2024_12-26-pm.txt  IP_Dinamicas_06-03-2024_12-29-pm.txt  IP_Dinamicas_06-03-2024_12-30-pm.txt  IP_Dinamicas_06-03-2024_12-32-pm.txt  IP_Dinamicas_06-03-2024_12-35-pm.txt  IP_Dinamicas_06-03-2024_12-37-pm.txt  IP_Dinamicas_06-03-2024_12-38-pm.txt  IP_Dinamicas_23-02-2024_01-52-am.txt  IP_Dinamicas_23-02-2024_02-25-am.txt  IP_Dinamicas_23-02-2024_02-27-am.txt  IP_Dinamicas_23-02-2024_02-28-am.txt  IP_Dinamicas_23-02-2024_02-30-am.txt  IP_Dinamicas_23-02-2024_02-33-am.txt  IP_Dinamicas_23-02-2024_02-36-am.txt  IP_Dinamicas_23-02-2024_02-39-am.txt  IP_Dinamicas_23-02-2024_02-41-am.txt  IP_Dinamicas_23-02-2024_02-42-am.txt  IP_Dinamicas_23-02-2024_12-46-am.txt  Reporte01-03-2024_12-37-pm.txt  Reporte01-03-2024_12-48-pm.txt  Reporte01-03-2024_12-54-pm.txt  available_IP.txt  (+10 more)
(+86 files in other folders)
