[package]
name = "api"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
dotenv = "0.15"
crossterm = "0.27.0"
dirs = "5.0.1"
mysql_async = "0.35.1"
tokio = { version = "1", features = ["full", "macros"] }

[build-dependencies]
winres = "0.1.12"
