[package]
name = "toolkit"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
chrono = "0.4.34"
crossterm = "0.27.0"
linked-hash-map = "0.5.6"
rpassword = "7.3.1"
serde = "1.0.196"
serde_json = "1.0.113"
ssh2 = "0.8.1"

[build-dependencies]
winres = "0.1"
base64 = "0.21.7"
rpassword = "7.3.1"
